# paw-viewer

./: .gitignore  LICENSE  README.md  pyproject.toml
paw_viewer/: run.py
res/: demo-multi-size.npz  demo-split-rgba.npz  demo.npy
src/paw_viewer/: __init__.py  __main__.py  animation.py  column.py  frame_sequence.py  frame_view.py  help_overlay.py  io.py  scalar_widget.py  selections.py  setup_sendto.py  slider.py  style.py  viewer.py  vignette.py  zoom_level.py
src/paw_viewer/shaders/: __init__.py  background_fragment.glsl  background_vertex.glsl  crop_fragment.glsl  crop_vertex.glsl  fragment.glsl  side_vignette_fragment.glsl  side_vignette_vertex.glsl  slider_fragment.glsl  slider_vertex.glsl  vertex.glsl
src/paw_viewer/ui/: __init__.py  slider.py
