[project]
name = "paw-viewer"
version = "0.1.0"
description = "A simple ndarray image/video viewer"
readme = "README.md"
authors = [{ name = "Pawel Kubik", email = "p.kubik.pl@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "pyglet>=2.1.11",
    "opencv-python>=4.11.0.86",
    "openexr>=3.4.4",
    "copykitten>=2.0.0",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"}
]
lint = [
    "ruff"
]
test = [
    "pytest"
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
paw = "paw_viewer.__main__:main"
